# django-controller-visitor

./: db.sqlite3  makefile  pyproject.toml  users.txt
core/: settings.py  urls.py
doormen/: admin.py  apps.py  models.py
doormen/migrations/: 0001_initial.py  0002_alter_doorman_options_alter_doorman_born_date_and_more.py  0003_rename_physic_person_register_doorman_register_id.py
templates/: base.html  index.html  visitors_register.html
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_is_active_alter_customuser_is_staff_and_more.py  0003_alter_customuser_options_alter_customuser_email_and_more.py
visitors/: admin.py  forms.py  models.py  views.py
visitors/migrations/: 0001_initial.py  0002_alter_visitor_options_and_more.py  0003_alter_visitor_person_identity.py  0004_rename_registered_for_visitor_registered_by.py
