[tool.poetry]
name = "visitors-controller"
version = "0.1.0"
description = ""
authors = ["JulioCSSousa <julio.sousa1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
